# BeyondSIngleObject

./: .gitignore  LICENSE  NOTICE  README.md  environment.yml  package-lock.json  package.json  pyproject.toml  react-router.config.ts  setup.py  vite.config.ts
.github/workflows/: deploy.yml
commands/: 01.md  02.md  03.md  04.md  05.md  06.md
configs/eval/: change_captioning.yaml  mo3d.yaml  shape_mating.yaml
configs/train/: joint.yaml
docs/: index.html
examples/: README.md
examples/sample_data/: sample_mo3d.json
examples/sample_data/sample_point_clouds/: object_1.csv  object_2.csv  object_3.csv
pointllm/: __init__.py
pointllm/data/: __init__.py  object_point_dataset.py  utils.py
pointllm/eval/cvpr/: eval_cvpr_patch.py  eval_modelnet_classification.py  evaluate_3d_qa_fast.py  (+1 more)
pointllm/model/: pointllm.py
pointllm/model_cvpr/: __init__.py  pointllm_cvpr.py  relation.py
pointllm/train/: callbacks.py  llama_flash_attn_monkey_patch.py  pointllm_trainer.py  train.py  train_mem.py
public/: robots.txt  sitemap.xml
scripts/: README.md
scripts/eval/: eval_llm.sh  eval_modelnet.sh  eval_nlp.sh  infer.sh
scripts/train/: common_torchrun.sh  train_joint.sh
src/app/: app.css  layout.tsx  root.tsx
src/app/routes/: Home.tsx
src/components/: InteractiveExamples.tsx  PointCloudViewer.tsx  RoomTourCard.tsx  RoomTourModal.tsx  footer.tsx  header.tsx
src/data/: examples.json  project.json
src/lib/: seo.ts
tools/: build_change_captioning.py  check_dataset_splits.py  evaluate_clip_classification.py  evaluate_text_metrics.py  validate_sample_dataset.py
(+25 files in other folders)
